# TAMA_CODER

./: .env.example  .gitignore  README.md  README_zh.md  prd.txt  progress.md  pyproject.toml  pyproject.toml.bck  requirements.txt
docs/: anthropics-claude-agent-sdk-python.txt  anthropics-claude-code.txt  arch.md  upgrade.md
docs/anthropics-claude-agent-sdk-python/: 1.md  2.md  3.md  4.md  5.md
docs/anthropics-claude-code/: 1.md  2.md  3.md  4.md
docs/cli_test_rules/: tama_complete_test_plan.md  tama_link_test_plan.md  tama_list_test_plan.md  tama_next_test_plan.md  tama_remove-dep_test_plan.md  tama_remove_test_plan.md  tama_status_test_plan.md
docs/gitreceiver-tama-cli/: 1.md  2.md
src/: mcp_server.py
src/agent/: agent_loop.py
src/ai/: client.py
src/ai/tools/: filesystem.py  git.py  registry.py  terminal.py
src/ai/utils/: backup.py
src/cli/: main.py
src/config/: settings.py
src/task_manager/: expansion.py  parsing.py  storage_sqlite.py
